# MeTTa-AI-Assistant

./: README.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ai-pr-review.yml
Backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pytest.ini  requirements.txt
Backend/app/: dependencies.py  main.py  run.py
Backend/app/Embedding/: metadata_index.py  model_config.py  pipeline.py  qdrant.py  qdrant_config.py
Backend/app/core/: log_config.py  middleware.py
Backend/app/db/: .env.example  __init__.py  db.py  key.py  users.py
Backend/app/model/: chat_message.py  chat_session.py  chunk.py  key.py
Backend/app/repositories/: chunk_repository.py
Backend/app/routers/: auth.py  chat.py  chunk_annotation.py  chunks.py  key_management.py  protected.py
Experiment/: embedder.py  experiment.py
Experiment/AST-Based-Recursive-Chunker/: .env-example  .gitignore  README.md  chunker.py  db.py  preprocess.py  requirements.txt
Experiment/AST-Based-Recursive-Chunker/metta_parser/: Cargo.toml  README.md  pyproject.toml
Experiment/AST-Based-Recursive-Chunker/metta_parser/src/: lib.rs
Experiment/CodeBertExperiment/: diagnostic.py  experiment.py  extractor.py  interactiveCodebert.py  test_data_generator.py
Experiment/Embbeding-Strategies-Experiment/: README.md  requirements.txt
Experiment/Embedding-Model/: Comparing_the_three_embedding_models.ipynb
Frontend/: package.json
Frontend/src/: App.jsx
MeTTaCodeRetrieval/: .gitignore  README.md  create_qdrant_collection.py  embed_metta_to_qdrant.py  search_metta_code.py
(+63 files in other folders)
