[package]
name = "metta_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "metta_parser"
crate-type = ["cdylib"]

[dependencies]
regex = "1"
unicode_reader = "1"

[dependencies.pyo3]
version = "0.21.2" 
features = ["extension-module"]